fixed position of footer on mobile.

--- a/static/styles.css
+++ b/static/styles.css
@@ -222,6 +222,11 @@ and (max-device-width : 480px) {
 
     }
 
+    div#searchform {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     p {
         font-size: 20px;
         padding-bottom: 3.5%;
